Add correct ga id

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,13 +14,13 @@
 		{% if jekyll.environment == 'production' %}
 
 			<!-- Global site tag (gtag.js) - Google Analytics -->
-			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-55190715-15"></script>
+			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-55190715-16"></script>
 			<script>
 			window.dataLayer = window.dataLayer || [];
 			function gtag(){dataLayer.push(arguments);}
 			gtag('js', new Date());
 
-			gtag('config', 'UA-55190715-15', { 'anonymize_ip': true });
+			gtag('config', 'UA-55190715-16');
 			</script>
 
 		{% endif %}
